--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jonatan Eseiza",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "http-status-codes": "^2.2.0"
   }
 }
