--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "http-status-codes": "^2.2.0"
+    "express-handlebars": "^6.0.2",
+    "http-status-codes": "^2.2.0",
+    "moment": "^2.29.1",
+    "socket.io": "^4.4.1"
   }
 }
